# IncohAutoCorrelate

./: .gitignore  IncohAutoCorrelate.sln  Readme.txt
DetPhStatSim/: ArrayMaths.cpp  ArrayMaths.h  DePhStSi_Settings.cpp  DePhStSi_Settings.h  DetPhStatSim.vcxproj  IniParser.cpp  IniParser.h  PhStatSimulator.cpp  PhStatSimulator.h  ProfileTime.cpp  ProfileTime.h  Settings.cpp  Settings.h  hdf5Handle.cpp  hdf5Handle.h  main.cpp
IcaXmlGen/: IcaXmlGen.vcxproj  main.cpp
IdiAnalysisPipeline/: DataContainer.h  IdiAnalysisPipeline.vcxproj  IniParser.h  main.cpp
IncohAutoCorrelate/: AC1D.cpp  AC1D.h  ACMesh.cpp  ACMesh.h  ArrayOperators.cpp  ArrayOperators.h  CMakeLists.txt  Crystal.cpp  Crystal.h  Detector.cpp  Detector.h  ExoticAnalysis.cpp  ExoticAnalysis.h  Forward.h  IncohAutoCorrelate.vcxproj  MainRunModes.cpp  MainRunModes.h  PPP.cpp  PPP.h  ProfileTime.cpp  ProfileTime.h  RunIAC.cpp  RunIAC.h  Settings.cpp  Settings.h  Simulator.cpp  Simulator.h  Statistics.cpp  Statistics.h  UnitTest.cpp  UnitTest.h  kernel.cl  main.cpp
